# omni_slam_eval

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: d435_camera.yaml  default_camera.yaml  default_camera_60.yaml  kitti_camera.yaml  matching_eval.launch  odometry_eval.launch  reconstruction_eval.launch  slam_eval.launch  slam_eval_kitti.launch  slam_eval_rs.launch  slam_eval_t265.launch  slam_eval_tum.launch  stereo_eval.launch  t265_camera.yaml  t265_camera_omni.yaml  tracking_eval.launch  tum_camera.yaml
scripts/: ang_res_plot.py  fov_to_chi.py  klt.py  match.py  matching_eval_plot.py  reconstruct.py  run_matching_eval_set.py  run_slam_eval_set.py  run_stereo_eval_set.py  run_tracking_eval_set.py  tracker_eval_plot.py  tracking_eval_plot.py
scripts/misc/: ang_res_plot.py  double_sphere.py  endpoint_distance.py  epipolar.py  fov.py  fov_to_chi.py  match.py  pose_hdf5_to_bag.py  region.py  reorder_bag.py
scripts/plot/: klt_errors.py  klt_inliers.py  klt_rate.py  klt_track_errors.py  klt_track_length.py  map_dist.py  map_errors.py  matching_distance.py  matching_distance_lr.py  matching_distribution.py  matching_eval_plot.py  matching_pr.py  matching_pr_lr.py  matching_pr_roc_sample.py  matching_repeatability.py  matching_rotation.py  matching_silhouette.py  matching_silhouette_lr.py  stereo_errors.py
src/: omni_slam_eval_tracking_node.cc  omni_slam_eval_tracking_node.h  omni_slam_matching_eval_node.cc  omni_slam_odometry_eval_node.cc  omni_slam_reconstruction_eval_node.cc  omni_slam_slam_eval_node.cc  omni_slam_stereo_eval_node.cc  omni_slam_tracking_eval_node.cc
src/camera/: camera_model.h  distortion_model.h  double_sphere.cc  double_sphere.h  perspective.cc  perspective.h  radtan.h  unified.h
src/data/: feature.cc  feature.h  frame.cc  frame.h  landmark.cc  landmark.h
src/feature/: descriptor_tracker.cc  descriptor_tracker.h  detector.cc  detector.h  lk_tracker.cc  lk_tracker.h  matcher.cc  matcher.h  region.h  tracker.cc  tracker.h
src/module/: matching_module.cc  matching_module.h  odometry_module.cc  odometry_module.h  reconstruction_module.cc  reconstruction_module.h  stereo_module.cc  stereo_module.h  tracking_module.cc  tracking_module.h
src/odometry/: five_point.cc  five_point.h  lambda_twist.h  pnp.cc  pnp.h  pose_estimator.cc  pose_estimator.h
src/optimization/: bundle_adjuster.cc  bundle_adjuster.h  reprojection_error.h  scale_parameterization.h
src/reconstruction/: triangulator.cc  triangulator.h
src/ros/: eval_base.cc  eval_base.h  matching_eval.cc  matching_eval.h  odometry_eval.cc  odometry_eval.h  reconstruction_eval.cc  reconstruction_eval.h  slam_eval.cc  slam_eval.h  stereo_eval.cc  stereo_eval.h  tracking_eval.cc  tracking_eval.h
src/stereo/: lk_stereo_matcher.cc  lk_stereo_matcher.h  stereo_matcher.cc  stereo_matcher.h
src/util/: hdf_file.cc  hdf_file.h  math_util.cc  math_util.h  tf_util.cc  tf_util.h
